--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(12, 1fr);
   grid-gap: 1vw;
   position: relative;
-  padding-bottom: 30px;
+  padding-bottom: 3vw;
 
   &-circle-one {
     z-index: 10;
