--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -107,6 +107,12 @@
   }
 }
 
+@media all and (min-width: 1300px) {
+  .home {
+    padding-bottom: 25px;
+  }
+}
+
 @media all and (max-width: 1105px) {
   .home {
     padding-bottom: 100px;
