--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -62,6 +62,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    white-space: nowrap;
     > div {
       font-size: 1.2rem;
       font-weight: 600;
