--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -1,5 +1,194 @@
 .services {
+  min-height: 100vh;
   width: 100%;
-  height: 100vh;
-  background: #42406c;
+  background: linear-gradient(45deg, #5e4fea, #510ebe);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &-text {
+    padding-top: 50px;
+    padding-bottom: 150px;
+    background: transparent;
+    color: #fafafa;
+    > h1 {
+      background: transparent;
+      font-size: 2.6rem;
+      text-align: center;
+      padding-bottom: 7px;
+    }
+    > p {
+      background: transparent;
+      font-weight: 300;
+      font-size: 1.1rem;
+      text-align: center;
+    }
+  }
+  &-glass {
+    width: 90%;
+    background: transparent;
+    display: grid;
+    align-items: end;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px;
+    padding-bottom: 50px;
+    &-item {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      position: relative;
+      background: #ffffff;
+      color: #fafafa;
+      background: linear-gradient(
+        to right bottom,
+        rgba(255, 255, 255, 0.3),
+        rgba(255, 255, 255, 0.05)
+      );
+      min-height: max(50vh, 400px);
+      border-radius: 2rem;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(2rem);
+      z-index: 2;
+      > h2 {
+        font-size: 1.7rem;
+        position: absolute;
+        top: 35%;
+        background: transparent;
+      }
+      > p {
+        background: transparent;
+        position: absolute;
+        top: 42%;
+        padding: 10%;
+        font-size: 0.9rem;
+        letter-spacing: 1px;
+        font-weight: 300;
+      }
+      &.one,
+      &.two,
+      &.three,
+      &.four {
+        > div {
+          position: absolute;
+          top: -25%;
+          width: 85%;
+          height: 50%;
+          background-position: bottom;
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-color: transparent;
+        }
+        > button {
+          position: absolute;
+          top: 75%;
+          height: 15%;
+          width: 80%;
+          font-size: 1.7rem;
+          font-weight: 600;
+          background: #1c1a46;
+          color: #fafafa;
+          border-radius: 20px;
+          border: none;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+      }
+
+      &.one {
+        > div {
+          background-image: url("../images/webdev.svg");
+        }
+      }
+      &.two {
+        > div {
+          background-image: url("../images/mobile.svg");
+        }
+      }
+      &.three {
+        > div {
+          top: calc(-25% - 6px);
+          background-image: url("../images/data.svg");
+        }
+      }
+      &.four {
+        > div {
+          background-image: url("../images/automate.svg");
+        }
+      }
+    }
+  }
+}
+
+.circle1,
+.circle2 {
+  background: #ffffff;
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.02)
+  );
+  height: 23rem;
+  width: 23rem;
+  position: absolute;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 300%;
+}
+
+.circle1 {
+  bottom: 0;
+  left: -3vw;
+}
+
+.circle2 {
+  right: -4vw;
+  bottom: 13vw;
+}
+
+@media all and (max-width: 1356px) {
+  .services {
+    &-glass {
+      width: 80%;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 7vw;
+      padding-bottom: 0;
+      &-item {
+        margin-bottom: 10vw;
+      }
+    }
+  }
+}
+
+@media all and (max-width: 720px) {
+  .services {
+    &-glass {
+      width: 70%;
+      grid-template-columns: 1fr;
+      padding-bottom: 0;
+      &-item {
+        margin-bottom: 25vw;
+      }
+    }
+  }
+}
+
+@media all and (max-width: 400px) {
+  .services {
+    &-glass {
+      width: 80%;
+    }
+  }
+}
+
+@media all and (max-width: 350px) {
+  .services {
+    &-glass {
+      &-item {
+        > h2 {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
 }
