--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -269,11 +269,12 @@
       display: none;
     }
     &-links-wrapper {
-      position: sticky;
       background: #fafafa;
+      min-height: 100vh;
+      max-height: 100vh;
       flex-direction: column;
       justify-content: start;
-      padding-top: 10vh;
+      padding-top: 13vh;
       align-items: center;
       width: 100%;
       height: 100vh;
