--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -28,6 +28,7 @@
   grid-template-rows: 50% 50%;
   grid-gap: 20px;
   top: 2vw;
+  bottom: 2vw;
   height: auto;
   left: calc(16vw + 5px);
   right: calc(16vw + 5px);
@@ -48,15 +49,20 @@
     background: transparent;
     cursor: pointer;
   }
-  > img {
+  &-logo {
     grid-column: 1;
     grid-row: 1;
-    width: 90%;
-    // height: 100%;
-    justify-self: center;
-    align-self: center;
+    // border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    > img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
+
   > main {
+    // border: 2px solid black;
     grid-column: 2;
     grid-row: 1;
     display: flex;
@@ -78,6 +84,7 @@
     }
   }
   > section {
+    // border: 2px solid black;
     grid-column: 1;
     grid-row: 2;
     display: flex;
@@ -119,6 +126,7 @@
     }
   }
   > div {
+    // border: 2px solid black;
     grid-column: 2;
     grid-row: 2;
     margin-bottom: 70px;
@@ -143,7 +151,7 @@
         background-color: transparent;
         list-style: none;
         > li {
-          border: 2px solid red;
+          // border: 2px solid red;
           background: transparent;
           display: flex;
           flex-direction: column;
@@ -159,26 +167,26 @@
           }
         }
       }
-      > button {
-        font-size: 1.2rem;
-        font-weight: 600;
-        background-color: #6c63ff;
-        color: #fafafa;
-        border: none;
-        border-radius: 50px;
-        // width: 50%;
-        display: inline-block;
-        height: auto;
-        padding: 15px 30px;
-        margin-top: 30px;
-        justify-self: center;
-        align-self: center;
-        cursor: pointer;
-        transition: background 300ms;
-        &:hover {
-          background: #1c1a46;
-        }
-      }
+    }
+  }
+  > button {
+    position: absolute;
+    bottom: 20px;
+    right: 25%;
+    transform: translateX(50%);
+    font-size: 1.2rem;
+    font-weight: 600;
+    background-color: #6c63ff;
+    color: #fafafa;
+    border: none;
+    border-radius: 50px;
+    white-space: nowrap;
+    padding: 15px 50px;
+    align-self: center;
+    cursor: pointer;
+    transition: background 300ms;
+    &:hover {
+      background: #1c1a46;
     }
   }
 }
@@ -208,18 +216,39 @@
   .modal-content {
     left: calc(3vw + 5px);
     right: calc(3vw + 5px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 85%;
-    > img {
-      height: 15%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% auto auto auto;
+    grid-gap: 10px;
+    &-logo {
+      grid-row: 1;
+      grid-column: 1;
+    }
+    > main {
+      grid-row: 2;
+      grid-column: 1;
+      width: 100%;
     }
     > section {
       display: none;
     }
     > div {
-      height: 30%;
+      grid-row: 3;
+      grid-column: 1;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      > h2 {
+        font-size: 2.5rem;
+        margin-bottom: 10px;
+      }
+    }
+    > button {
+      position: static;
+      grid-row: 4;
+      grid-column: 1;
+      transform: translate(0, 30px);
+      justify-self: center;
     }
   }
 }
@@ -227,51 +256,79 @@
 @media all and (max-width: 550px) {
   .modal-content {
     padding: 30px;
-    top: 6vw;
-
+    grid-gap: 5px;
     > main {
-      width: 100%;
-      margin-bottom: 0;
+      margin-bottom: 10px;
       > h1 {
         font-size: 1.6rem;
+        margin-bottom: 0;
       }
       > p {
+        margin-top: 0;
         font-size: 1rem;
       }
     }
-    > section {
-      display: none;
+    > div {
+      margin-bottom: 10px;
+      > h2 {
+        font-size: 1.6rem;
+        margin-bottom: 0;
+      }
+      > div {
+        margin-top: 8px;
+      }
+    }
+    > button {
+      transform: translateY(0);
+    }
+  }
+}
+
+@media (max-width: 380px) {
+  .modal-content {
+    grid-gap: 0;
+    > main {
+      > h1 {
+        font-size: 1.3rem;
+      }
+      > p {
+        font-size: 0.8rem;
+      }
     }
     > div {
       > h2 {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
+      }
+      > div {
+        > ul {
+          height: 50%;
+          align-items: center;
+          justify-content: center;
+          > li {
+            > p {
+              font-size: 0.7rem;
+            }
+          }
+        }
       }
     }
   }
 }
 
-@media (max-width: 450px) and (max-height: 800px) {
+@media (max-width: 325px) {
   .modal-content {
-    padding: 30px;
-    top: 6vw;
-
+    grid-template-rows: 15% 30% 45%;
     > main {
-      width: 100%;
-      margin-bottom: 0;
-      > h1 {
-        font-size: 1.6rem;
-      }
       > p {
-        font-size: 1rem;
+        font-size: 0.7rem;
       }
-    }
-    > section {
-      display: none;
     }
     > div {
-      > h2 {
-        font-size: 1.6rem;
+      > div {
+        > ul {
+          grid-gap: 0;
+        }
       }
     }
   }
-} ;
+}
