--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -130,8 +130,8 @@
     grid-column: 2;
     grid-row: 2;
     margin-bottom: 70px;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
 
     > h2 {
       border: 2px solid green;
@@ -151,10 +151,10 @@
       > ul {
         border: 3px solid red;
         display: grid;
-        height: 100%;
+        height: 80%;
         grid-gap: 10px;
-        align-items: center;
-        justify-content: center;
+        // align-items: center;
+        // justify-content: center;
         background-color: transparent;
         list-style: none;
         > li {
@@ -251,7 +251,7 @@
       }
       > div {
         > ul {
-          // height: auto;
+          height: auto;
         }
       }
     }
@@ -313,7 +313,7 @@
       }
       > div {
         > ul {
-          // height: auto;
+          height: auto;
           align-items: center;
           justify-content: center;
           > li {
