--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -130,11 +130,12 @@
     grid-column: 2;
     grid-row: 2;
     margin-bottom: 70px;
-    // display: flex;
-    // flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     > h2 {
-      border: 2px solid green;
+      // border: 2px solid green;
       color: #42406c;
       font-size: 2rem;
       width: 100%;
@@ -143,22 +144,19 @@
     }
     > div {
       width: 100%;
-      height: 100%;
       background-color: transparent;
       display: flex;
       flex-direction: column;
       margin-top: 22px;
       > ul {
-        border: 3px solid red;
+        // border: 3px solid red;
         display: grid;
-        height: 80%;
+        height: auto;
         grid-gap: 10px;
-        // align-items: center;
-        // justify-content: center;
         background-color: transparent;
         list-style: none;
         > li {
-          border: 2px solid blue;
+          // border: 2px solid blue;
           background: transparent;
           display: flex;
           flex-direction: column;
