--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -52,7 +52,6 @@
   &-logo {
     grid-column: 1;
     grid-row: 1;
-    // border: 2px solid black;
     display: flex;
     justify-content: center;
     > img {
@@ -62,7 +61,6 @@
   }
 
   > main {
-    // border: 2px solid black;
     grid-column: 2;
     grid-row: 1;
     display: flex;
@@ -84,7 +82,6 @@
     }
   }
   > section {
-    // border: 2px solid black;
     grid-column: 1;
     grid-row: 2;
     display: flex;
@@ -126,7 +123,6 @@
     }
   }
   > div {
-    // border: 2px solid black;
     grid-column: 2;
     grid-row: 2;
     margin-bottom: 70px;
@@ -135,63 +131,71 @@
     height: 100%;
 
     > h2 {
-      // border: 2px solid green;
       color: #42406c;
       font-size: 2rem;
       width: 100%;
-      margin-bottom: -12px;
       text-align: center;
+      // border: 2px solid red;
     }
     > div {
-      width: 100%;
-      background-color: transparent;
+      height: 100%;
+      // border: 3px solid blue;
       display: flex;
       flex-direction: column;
-      margin-top: 22px;
-      > ul {
-        // border: 3px solid red;
-        display: grid;
-        height: auto;
-        grid-gap: 10px;
+      justify-content: space-around;
+      > div {
+        // border: 3px solid black;
+        width: 100%;
         background-color: transparent;
-        list-style: none;
-        > li {
-          // border: 2px solid blue;
-          background: transparent;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          > img {
-            height: 100%;
-          }
-          > p {
+        display: flex;
+        flex-direction: column;
+        > ul {
+          display: grid;
+          height: auto;
+          grid-gap: 10px;
+          background-color: transparent;
+          list-style: none;
+          > li {
             background: transparent;
-            font-weight: 400;
-            color: #42406c;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            > img {
+              height: 100%;
+            }
+            > p {
+              background: transparent;
+              font-weight: 400;
+              color: #42406c;
+            }
           }
         }
       }
-    }
-  }
-  > button {
-    position: absolute;
-    bottom: 20px;
-    right: 25%;
-    transform: translateX(50%);
-    font-size: 1.2rem;
-    font-weight: 600;
-    background-color: #6c63ff;
-    color: #fafafa;
-    border: none;
-    border-radius: 50px;
-    white-space: nowrap;
-    padding: 15px 50px;
-    align-self: center;
-    cursor: pointer;
-    transition: background 300ms;
-    &:hover {
-      background: #1c1a46;
+      > section {
+        // border: 2px solid red;
+        // height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        > button {
+          font-size: 1.2rem;
+          font-weight: 600;
+          background-color: #6c63ff;
+          color: #fafafa;
+          border: none;
+          border-radius: 50px;
+          white-space: nowrap;
+          padding: 15px 50px;
+          align-self: center;
+          cursor: pointer;
+          transition: background 300ms;
+          &:hover {
+            background: #1c1a46;
+          }
+        }
+      }
     }
   }
 }
@@ -223,7 +227,7 @@
     right: calc(3vw + 5px);
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20% auto auto auto;
+    grid-template-rows: 20% auto auto;
     grid-gap: 10px;
     &-logo {
       grid-row: 1;
@@ -245,20 +249,7 @@
       margin: 0;
       > h2 {
         font-size: 2.5rem;
-        margin-bottom: 10px;
       }
-      > div {
-        > ul {
-          height: auto;
-        }
-      }
-    }
-    > button {
-      position: static;
-      grid-row: 4;
-      grid-column: 1;
-      transform: translate(0, 30px);
-      justify-self: center;
     }
   }
 }
@@ -282,14 +273,7 @@
       margin-bottom: 10px;
       > h2 {
         font-size: 1.6rem;
-        margin-bottom: 0;
       }
-      > div {
-        margin-top: 8px;
-      }
-    }
-    > button {
-      transform: translateY(0);
     }
   }
 }
@@ -311,7 +295,6 @@
       }
       > div {
         > ul {
-          height: auto;
           align-items: center;
           justify-content: center;
           > li {
