--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -1,7 +1,7 @@
 .services {
   min-height: 100vh;
   width: 100%;
-  background: linear-gradient(315deg, #6b5bf7, #380985);
+  background: linear-gradient(315deg, #5e4fe9, #271d83);
   position: relative;
   display: flex;
   flex-direction: column;
