--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -19,6 +19,7 @@
 .rec.rec-dot {
   background: #fafafa;
   box-shadow: none;
+  margin-bottom: 130px;
   &:hover {
     box-shadow: 0 0 1px 3px #1c1a46;
   }
@@ -102,6 +103,64 @@
       text-align: center;
     }
   }
+
+  > footer {
+    height: 60vh;
+    width: 100%;
+    background-color: #fafafa;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    > section {
+      position: absolute;
+      min-height: 20vh;
+      width: 90%;
+      background: #1c1a46;
+      top: 0;
+      transform: translateY(-50%);
+      border-radius: 15px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      > h1 {
+        font-size: 1.8rem;
+        background: transparent;
+        color: #fafafa;
+      }
+      > p {
+        width: 28%;
+        text-align: center;
+        background: transparent;
+        color: #fafafa;
+        font-weight: 300;
+      }
+      > button {
+        font-size: 1.3rem;
+        font-weight: 300;
+        background: transparent;
+        color: #fafafa;
+        border: 3px solid #5e4fea;
+        border-radius: 50px;
+        white-space: nowrap;
+        padding: 12px 24px;
+        cursor: pointer;
+        transition: background 300ms;
+        &:hover {
+          background: #5e4fea;
+        }
+      }
+    }
+  }
+}
+
+@media all and (max-width: 990px) {
+  .blog {
+    &-item {
+      width: 70%;
+    }
+  }
 }
 
 @media all and (max-width: 850px) {
@@ -122,13 +181,35 @@
         align-self: center;
       }
     }
+    > footer {
+      > section {
+        width: 95%;
+      }
+    }
+  }
+}
+
+@media all and (max-width: 790px) {
+  .blog {
+    &-item {
+      width: 75%;
+    }
+  }
+  .rec.rec-arrow {
+    margin: 0;
+  }
+  .rec.rec-arrow-left {
+    margin-left: 10px;
+  }
+  .rec.rec-arrow-right {
+    margin-right: 10px;
   }
 }
 
 @media all and (max-width: 759px) {
   .blog {
     &-item {
-      width: 40%;
+      width: 50%;
       > p {
         font-size: 1rem;
       }
@@ -144,29 +225,74 @@
         align-self: flex-start;
       }
     }
+    > footer {
+      > section {
+        > h1 {
+          font-size: 1.5rem;
+        }
+        > p {
+          font-size: 0.9rem;
+          width: 30%;
+        }
+        > button {
+          font-size: 1.1rem;
+
+          padding: 12px 24px;
+        }
+      }
+    }
   }
 }
 
 @media all and (max-width: 670px) {
   .blog {
     &-item {
-      width: 50%;
+      width: 60%;
     }
+    > footer {
+      > section {
+        min-height: 20vh;
+        width: 70%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        > h1 {
+          font-size: 1.5rem;
+          margin: 15px;
+          margin-top: 30px;
+        }
+        > p {
+          font-size: 0.9rem;
+          width: 90%;
+          margin: 15px;
+        }
+        > button {
+          font-size: 1.1rem;
+
+          padding: 12px 24px;
+          margin: 15px;
+          margin-bottom: 30px;
+        }
+      }
+    }
+  }
+  .rec.rec-dot {
+    margin-bottom: 180px;
   }
 }
 
 @media all and (max-width: 570px) {
   .blog {
     &-item {
-      width: 60%;
+      width: 70%;
     }
   }
 }
 
-@media all and (max-width: 510px) {
+@media all and (max-width: 540px) {
   .blog {
     &-item {
-      width: 70%;
+      width: 80%;
     }
   }
 }
@@ -181,13 +307,18 @@
         font-size: 0.9rem;
       }
     }
+    > footer {
+      > section {
+        width: 80%;
+      }
+    }
   }
 }
 
 @media all and (max-width: 470px) {
   .blog {
     &-item {
-      width: 50%;
+      width: 60%;
     }
   }
   .rec.rec-carousel {
@@ -199,6 +330,9 @@
 
 @media all and (max-width: 400px) {
   .blog {
+    &-item {
+      width: 70%;
+    }
     > header {
       > h1 {
         font-size: 1.8rem;
@@ -229,12 +363,12 @@
 @media all and (max-width: 340px) {
   .blog {
     &-item {
-      width: 60%;
+      width: 75%;
     }
   }
 }
 
-@media all and (max-width: 340px) {
+@media all and (max-width: 300px) {
   .blog {
     &-item {
       > p {
