--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -150,7 +150,8 @@
   }
 
   > footer {
-    height: 60vh;
+    padding-bottom: 70px;
+    min-height: 60vh;
     width: 100%;
     background-color: #fafafa;
     position: relative;
@@ -206,7 +207,6 @@
       align-items: center;
       > p {
         font-weight: 100;
-        margin-bottom: 50px;
       }
     }
   }
