--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -63,10 +63,12 @@
     justify-content: flex-end;
     align-items: center;
     white-space: nowrap;
-    > div {
+    &-link {
+      background: transparent;
+      text-decoration: none;
+      color: #5e4fea;
       font-size: 1.2rem;
       font-weight: 600;
-      color: #5e4fea;
       border: 3px solid;
       border-radius: 200px;
       padding: 10px 35px;
@@ -76,7 +78,7 @@
         background: #5e4fea;
         cursor: pointer;
       }
-      transition: all 300ms;
+      transition: all 300ms ease;
     }
   }
 
@@ -290,6 +292,7 @@
       &-hidden {
         opacity: 0;
         transition: opacity 0.4s;
+        text-decoration: none;
         &.mobile-contact {
           opacity: 0;
           font-size: 1.2rem;
@@ -310,6 +313,7 @@
       &-visible {
         opacity: 1;
         transition: opacity 0.4s 0.6s;
+        text-decoration: none;
         &.mobile-contact {
           opacity: 1;
           font-size: 1.2rem;
