--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -40,6 +40,22 @@
 .blog {
   min-height: 100vh;
   background-color: #5e4fea;
+
+  &-cta {
+    text-decoration: none;
+    font-weight: 300;
+    background: transparent;
+    color: #fafafa;
+    border: 3px solid #5e4fea;
+    border-radius: 50px;
+    white-space: nowrap;
+    padding: 12px 24px;
+    cursor: pointer;
+    transition: background 300ms;
+    &:hover {
+      background: #5e4fea;
+    }
+  }
   &-footer-logo {
     background: transparent;
     cursor: pointer;
@@ -187,19 +203,9 @@
         font-weight: 300;
       }
       > button {
-        font-size: 1.3rem;
-        font-weight: 300;
         background: transparent;
-        color: #fafafa;
-        border: 3px solid #5e4fea;
-        border-radius: 50px;
-        white-space: nowrap;
-        padding: 12px 24px;
-        cursor: pointer;
-        transition: background 300ms;
-        &:hover {
-          background: #5e4fea;
-        }
+        border: none;
+        font-size: 1.3rem;
       }
     }
     > main {
